全体のボタン配置などを調整

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,12 +19,13 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :password %> <i>(変更しない場合は空欄のままにしてください。)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.label :password %> 
     <% if @minimum_password_length %>
-      <br />
       <em>(<%= @minimum_password_length %>文字以上)</em>
     <% end %>
+    <br />
+    <i>(パスワードを変更しない場合は空欄のままにしてください。)</i><br />
+    <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
   <div class="field">
@@ -33,18 +34,18 @@
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <i>(変更するには現在のパスワードが必要です)</i><br />
+    <%= f.label :current_password %> <i>(ユーザー情報を変更するには現在のパスワードが必要です)</i><br />
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
 
   <div class="actions">
     <%= f.submit "更新", class: "waves-light btn" %>
+    <%= link_to "キャンセル", :back, class: "waves-light btn yellow darken-3" %>
   </div>
 <% end %>
+
 
 <h3>アカウントを削除</h3>
 
 <p>アカウントを削除しますか？ <%= button_to "アカウントを削除する", registration_path(resource_name),
   data: { confirm: "本当に削除してよろしいですか？" }, method: :delete, class: "waves-light btn red" %></p>
-
-<%= link_to "戻る", :back %>
