textfieldのautocompleteとplaceholderを設定

--- a/app/views/media_manages/_input_time.html.erb
+++ b/app/views/media_manages/_input_time.html.erb
@@ -1,6 +1,6 @@
 
 <div class="time-input-parts">
-  <input type="tel" name="<%= prefix %>-time-input-hour" maxlength="2"
+  <input type="tel" name="<%= prefix %>-time-input-hour" maxlength="2" placeholder="時" autocomplete="off"
    class="time-input-text browser-default" value="<%= value / 3600 unless value.nil? %>">
 </div>
 
@@ -10,7 +10,7 @@
   ：
 </div>
 <div class="time-input-parts">
-  <input type="tel" name="<%= prefix %>-time-input-min" maxlength="2"
+  <input type="tel" name="<%= prefix %>-time-input-min" maxlength="2" placeholder="分" autocomplete="off"
    class="time-input-text browser-default" value="<%= sec / 60 unless value.nil? %>">
 </div>
 
@@ -20,6 +20,6 @@
   ：
 </div>
 <div class="time-input-parts">
-  <input type="tel" name="<%= prefix %>-time-input-sec" maxlength="2"
+  <input type="tel" name="<%= prefix %>-time-input-sec" maxlength="2" placeholder="秒" autocomplete="off"
    class="time-input-text browser-default" value="<%= sec unless value.nil? %>">
 </div>
