--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
+    <%= favicon_link_tag('favicon.ico') %>
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
