youtubeのリンクを別タブで開くように修正

--- a/app/assets/stylesheets/media_manage.scss
+++ b/app/assets/stylesheets/media_manage.scss
@@ -11,6 +11,7 @@
   display: block;
   position: relative;
   width: 240px;
+  margin-top: 10px;
   & > .media-length {
     display: block;
     position: absolute;
