fixes #50 動画画面から戻るとき、一覧かプレイリストか分岐できるようにする

--- a/app/views/media_manages/_media_manage.html.erb
+++ b/app/views/media_manages/_media_manage.html.erb
@@ -9,7 +9,13 @@
   </div>
   <div class="card-stacked">
     <div class="card-action">
-      <%= link_to media_manage.title, media_manage_path(media_manage), class: 'black-text' %>
+      <% params = {} %>
+
+      <% if playlist %>
+        <% params[:playlist] = playlist %>
+      <% end %>
+
+      <%= link_to media_manage.title, media_manage_path(media_manage, **params), class: 'black-text' %>
     </div>
     <div class="card-content grey-text text-darken-1">
       <p>
