--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -35,4 +35,4 @@
   </div>
 </div>
 
-<%= render partial: 'shared/media_manages', locals: { media_manages: @media_manages } %>
+<%= render partial: 'shared/media_manages', locals: { media_manages: @media_manages, playlist: @playlist } %>
