--- a/app/views/shared/_media_manages.html.erb
+++ b/app/views/shared/_media_manages.html.erb
@@ -1,6 +1,6 @@
 <div class="media_manage_list jscroll">
   <% if media_manages.any? %>
-    <%= render partial: "media_manages/media_manage", collection: media_manages %>
+    <%= render partial: "media_manages/media_manage", collection: media_manages, locals: { playlist: @playlist } %>
   <% end %>
 
   <%= paginate media_manages %>
