--- a/app/views/media_manages/_input_timespan_modal.html.erb
+++ b/app/views/media_manages/_input_timespan_modal.html.erb
@@ -12,7 +12,7 @@
     <a href="#!" class="modal-close waves-effect waves btn yellow darken-3">キャンセル</a>
     <button type="button" id="timespan_submit_id" class="waves-effect waves-lite btn">登録</button>
 
-    <%= form_with id: 'timespan_form_id', url: media_time_span_index_path do |f| %>
+    <%= form_with id: 'timespan_form_id', url: add_params_to_url(media_time_span_index_path, playlist_param) do |f| %>
       <input type="hidden" name="media_manage_id" value="<%= media_namage.id %>">
       <input type="hidden" name="begin_sec" value="123">
       <input type="hidden" name="end_sec" value="456">
