fixes #116 URLの重複を検出する機能を実装する

--- a/app/assets/stylesheets/media_manage.scss
+++ b/app/assets/stylesheets/media_manage.scss
@@ -158,3 +158,11 @@
   width: 100%;
   height: 10px;
 }
+
+.media_manage-alert-area {
+  margin-top: 15px;
+}
+.duplicate-media-url {
+  font-size: 18px;
+  color: red;
+}
