--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
   <div class="landing-content">
     <div class="copy-text">
       もう、続きを探す</br>
-      必要はありません1
+      必要はありません
     </div>
 
     <div class="landing-buttons">
