--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,14 @@
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
 
-    <%= stylesheet_link_tag 'application', media: 'all' %>
-    <%= javascript_pack_tag 'application' %>
+    <%#= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+    <%= javascript_include_tag "application", defer: true %>
+    <%= javascript_include_tag "materialize_init", defer: true %>
+    <%= javascript_include_tag "input_time", defer: true %>
+    <%= javascript_include_tag "playlist", defer: true %>
+    <%= javascript_include_tag "search_form", defer: true %>
+    <%= javascript_include_tag "media_manage", defer: true %>
+    <%= stylesheet_link_tag "application", defer: true %>
   </head>
 
   <body>
